...
        let cell = tableView.dequeueReusableCell(withIdentifier: ImagesListCell.reuseIdentifier, for: indexPath)
        
        guard let imagesListCell = cell as? ImagesListCell else {
            return UITableViewCell()
        }
        imagesListCell.delegate = self
        imagesListCell.likeButton.accessibilityIdentifier = "like button"
        configCell(for: imagesListCell, with: indexPath)
        return imagesListCell
    }
}

//MARK: - ImagesListCellDelegate
...
